# drones-network-simulation

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.drone  Dockerfile.observer  README.md  docker-compose.yml  pyproject.toml
docs/: RoteiroFinal-Exame.docx  ~$teiroFinal-Exame.docx
src/drones_simulation/: __init__.py
src/drones_simulation/api/: app.py
src/drones_simulation/config/: __init__.py  config.py
src/drones_simulation/log/: logger.py
src/drones_simulation/models/: __init__.py  base.py  behavior.py  communicator.py  connector.py  drone.py  message.py
src/drones_simulation/services/: __init__.py  main.py  simulation.py
src/drones_simulation/services/behaviors/: __init__.py  attacker.py  invaded.py  invaded_leader.py  leader.py  on_mission.py  router.py
src/drones_simulation/services/communicators/: __init__.py  tcp.py
src/drones_simulation/services/connector/: __init__.py  tcp.py
src/drones_simulation/services/connectors/: router.py  tcp.py
src/drones_simulation/services/simulations/: __init__.py  invaded.py  on_mission.py  router.py
src/observer/: observer.py
src/observer/api/: app.py
