[tool.poetry]
name = "drones-simulation"
version = "0.1.0"
description = ""
authors = ["Samir Nunes da Silva"]
readme = "README.md"
packages = [{ include = "drones_simulation", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
